Fixed Sidebar overflow
Update content section grid

--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,7 @@ input, button, textarea, select{
 }
 
 body, html{
-    height: 100%; 
-    scroll-behavior: smooth; 
+    scroll-behavior: smooth;
 }
 
 /*ACTUAL CONTENT STARTS HERE*/
@@ -63,12 +62,13 @@ body, html{
 }
 
 body{
-    padding:20px;
+    width: 100%;
+    height: 100%; 
+    padding: 30px;
     background:var(--body-background-color);
 }
 
 .whole-container {
-    height: 100%;
     display: grid;
     grid-template-columns: 1fr 6fr;
     grid-template-rows: 2fr 8fr;
@@ -83,10 +83,9 @@ body{
     color: var(--accent-color);
 
     display: grid;
-    grid-template-rows:1fr 3fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
     padding: 30px;
-    padding-top: 30px;
-    padding-bottom: 100px;
+    padding-top: 50px;
 }
 .main-sidebar{
     grid-row:2/3;
@@ -99,8 +98,9 @@ body{
 
 .sidebar-title{
     display: flex;
-    align-items: center;
+    align-items: top;
     margin-bottom: 60px;
+    margin-top: 0;
 }
 
 .sidebar-title-icon{
@@ -114,7 +114,7 @@ body{
 
 .sidebar-element{
     display: flex;
-    align-items: center;
+    align-items: top;
     margin-top: 10px;
 }
 
@@ -228,7 +228,7 @@ body{
 .buttons-container{
     display: flex;
     align-items: center;
-    gap:40px;
+    gap:20px;
 }
 
 .header-buttons{
@@ -270,13 +270,15 @@ body{
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 6fr 2fr;
-    grid-template-rows: 4fr 4fr;
+    grid-template-rows: 1fr 4fr 1fr 4fr;
     padding:20px;
 }
 
+.project-text{
+    grid-area: 1/1/2/2;
+}
 .projects-container {
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
+    grid-area:2/1/4/2;
     display: grid;
     grid-template-columns: 200px 200px; /* Adjusted the syntax */
     grid-template-rows: repeat(3, 2fr);
